[package]
name = "misaka-mil-attest"
description = "MISAKA Inference Lane (MIL) attestation verification: quote bundle format, TDX/SEV-SNP structural parsers, measurement pinning, report_data key binding, verification cache"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kaspa-hashes.workspace = true
misaka-mil-core.workspace = true

borsh.workspace = true
p256.workspace = true
p384.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
